<resources>
    <string name="app_name">ParkTap</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- THESE ARE FOR THE INITIAL ONBOARDING ONLY! -->
    <string name="initial_onboarding_page_1_phrase">Never forget your parking location again</string>
    <string name="initial_onboarding_page_1_already_a_member">Already a member?</string>
    <string name="initial_onboarding_page_2_phrase1">Record time when you\'ve arrived &amp;</string>
    <string name="initial_onboarding_page_2_phrase2">estimate fee parking</string>
    <string name="initial_onboarding_page_3_phrase1">Easily save and get direction to your</string>
    <string name="initial_onboarding_page_3_phrase2">parking location</string>
    <string name="initial_onboarding_page_4_phrase1">Get deals &amp; vouchers from your nearby area</string>
    <string name="initial_onboarding_page_4_phrase2">and redeem it</string>
    <string name="initial_onboarding_page_5_phrase1">Chat with your nearby friends for reunion</string>
    <string name="initial_onboarding_page_5_phrase2">or just catch up</string>

    <string name="skip">SKIP</string>
    <string name="sign_in"><u>SIGN-IN</u></string>
    <string name="forgot_password"><u>FORGOT PASSWORD?</u></string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up"><u>SIGN-UP</u></string>
    <string name="title_activity_sign_up">Sign-up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">PARKTAP</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <string name="nav_drawer_promotions">Promotions</string>
    <string name="nav_drawer_parking_location">My Parking Location</string>
    <string name="nav_drawer_inventory">Inventory</string>
    <string name="nav_drawer_friends">Friends</string>
    <string name="pref_previously_started">FIRST_TIME_PARKTAP</string>
    <string name="search">Search</string>
    <string name="action_restore_app">Restore</string>
</resources>
