<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pt="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:src="@drawable/parktap_logo" />

    <com.indovation.parktap.util.PTEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:layout_below="@+id/imageView"
        android:hint="@string/username_hint"
        android:background="@android:color/white"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:padding="10dp"
        pt:typeface="opensans_light"
        android:nextFocusForward="@+id/et_password"/>

    <com.indovation.parktap.util.PTEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/et_username"
        android:background="@android:color/white"
        android:hint="@string/password_hint"
        android:layout_alignRight="@+id/et_username"
        android:layout_alignEnd="@+id/et_username"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:padding="10dp"
        android:layout_marginTop="1dp"
        pt:typeface="opensans_light"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_login_btn"
        android:layout_below="@+id/et_password"
        android:src="@drawable/login_button"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginTop="10dp" />

    <com.indovation.parktap.util.PTTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/tv_sign_up_click"
        android:layout_below="@+id/iv_login_btn"
        android:layout_alignRight="@+id/iv_login_btn"
        android:layout_alignEnd="@+id/iv_login_btn"
        android:layout_marginTop="10dp"
        pt:typeface="opensans_regular"
        android:textColor="@android:color/white"/>

    <com.indovation.parktap.util.PTTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/tv_forgot_password_click"
        pt:typeface="opensans_regular"
        android:textColor="@android:color/white"
        android:layout_below="@+id/tv_sign_up_click"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="110dp"/>

</RelativeLayout>