<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pt="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    >

    <com.indovation.parktap.util.PTTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_skip"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        pt:typeface="opensans_light"
        android:textColor="@android:color/white"
        android:text="@string/skip"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_skip"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="70dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_chat" />
    </LinearLayout>

    <com.indovation.parktap.util.PTTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        pt:typeface="opensans_light"
        android:textColor="@android:color/white"
        android:text="@string/initial_onboarding_page_5_phrase1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:id="@+id/tv_initial_onboarding_phrase1"
        android:layout_marginBottom="130dp"/>

    <com.indovation.parktap.util.PTTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        pt:typeface="opensans_light"
        android:textColor="@android:color/white"
        android:text="@string/initial_onboarding_page_5_phrase2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="110dp"
        android:id="@+id/tv_sign_in"
        android:layout_alignBottom="@id/tv_initial_onboarding_phrase1" />

</RelativeLayout>